charon/tests/ui/unsupported/issue-165-vec-macro.rs
//@ known-failure
fn foo() {
    let _v = vec![1];
}
